--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.1.1",
+    "react-moment": "^1.1.1",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll-up": "^1.3.7",
+    "redux-thunk": "^2.3.0",
+    "sweetalert2": "^11.0.19",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
